--- a/css/main.css
+++ b/css/main.css
@@ -108,11 +108,54 @@ body {
   height: 100%;
 }
 
+header,
+footer {
+  background-color: #9bf6ff;
+  height: 80px;
+  width: 100%;
+}
+
+main {
+  background-color: #bdb2ff;
+  height: 250px;
+  width: 100%;
+}
+
+header,
+footer,
+main {
+  color: #577590;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+main {
+  border-bottom: 5px solid #e9ff70;
+  color: white;
+  font-size: 3rem;
+  padding: 0 1rem 0 1rem;
+}
+
+header {
+  font-size: 5rem;
+  padding: .5rem 1rem;
+}
+
+footer {
+  border-top: 5px solid #e9ff70;
+  font-size: 1.5rem;
+  padding: 0 1rem;
+}
+
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
   display:flex;
   font-weight: 700;
+  justify-content: center;
   justify-content:space-between;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .div-1, .div-2, .div-3 {
@@ -132,8 +175,8 @@ body {
 }
 
 .div-2 {
-  border-left: 5px solid #e9ff70;
-  border-right: 5px solid #e9ff70;
+  border-left: 3px solid #e9ff70;
+  border-right: 3px solid #e9ff70;
 }
 
 
